# Module_Web_12_MHW

./: Readme.md  main.py  middlewares.py  pyproject.toml
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py
