[tool.poetry]
name = "module-web-12-mhw"
version = "0.1.0"
description = ""
authors = ["Олександр <alexander.zhukov.2012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
fastapi = "^0.110.1"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
